# realtime_video_stitching

./: CMakeLists.txt  LICENSE  README.md  _CMakeLists.txt_
avformat/: avformatConfig.cmake
avformat/lib/include/: config.h
avformat/lib/include/libavutil/: file.h
libs/arm64-v8a/boost/lib/cmake/: BoostDetectToolset-1.80.0.cmake
libs/arm64-v8a/boost/lib/cmake/boost_atomic-1.80.0/: boost_atomic-config.cmake  libboost_atomic-variant-clang-mt-a64-1_80-static.cmake
libs/arm64-v8a/boost/lib/cmake/boost_chrono-1.80.0/: boost_chrono-config.cmake  libboost_chrono-variant-clang-mt-a64-1_80-static.cmake
libs/arm64-v8a/boost/lib/cmake/boost_container-1.80.0/: boost_container-config.cmake  libboost_container-variant-clang-mt-a64-1_80-static.cmake
libs/arm64-v8a/boost/lib/cmake/boost_context-1.80.0/: boost_context-config.cmake  libboost_context-variant-clang-mt-a64-1_80-static.cmake
libs/arm64-v8a/boost/lib/cmake/boost_contract-1.80.0/: boost_contract-config.cmake  libboost_contract-variant-clang-mt-a64-1_80-static.cmake
libs/arm64-v8a/boost/lib/cmake/boost_coroutine-1.80.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-clang-mt-a64-1_80-static.cmake
libs/arm64-v8a/boost/lib/cmake/boost_date_time-1.80.0/: boost_date_time-config.cmake  libboost_date_time-variant-clang-mt-a64-1_80-static.cmake
libs/arm64-v8a/boost/lib/cmake/boost_exception-1.80.0/: boost_exception-config.cmake
libs/arm64-v8a/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
(+61 files in other folders)
